--- a/pfe-frontend/src/app/core/features/components/login/login.component.html
+++ b/pfe-frontend/src/app/core/features/components/login/login.component.html
@@ -1,3 +1,5 @@
+<p-toast></p-toast>
+
 <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
   <p-card class="w-full max-w-md">
     <ng-template pTemplate="header">
